# docs/swagger.yaml
@@ -1000,10 +1000,16 @@ definitions:
     type: object
   github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.DiscardDraftVersionRequest:
     properties:
+      listingIdentityId:
+        example: 1024
+        minimum: 1
+        type: integer
       versionId:
+        example: 5001
         minimum: 1
         type: integer
     required:
+    - listingIdentityId
     - versionId
     type: object
   github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.DiscardDraftVersionResponse:
@@ -1814,10 +1820,16 @@ definitions:
     type: object
   github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.PromoteListingVersionRequest:
     properties:
+      listingIdentityId:
+        example: 1024
+        minimum: 1
+        type: integer
       versionId:
+        example: 5001
         minimum: 1
         type: integer
     required:
+    - listingIdentityId
     - versionId
     type: object
   github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.PromoteListingVersionResponse:
@@ -1895,14 +1907,14 @@ definitions:
     type: object
   github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.ReservePhotoSessionRequest:
     properties:
-      listingId:
-        example: 1001
+      listingIdentityId:
+        example: 1024
         type: integer
       slotId:
         example: 2002
         type: integer
     required:
-    - listingId
+    - listingIdentityId
     - slotId
     type: object
   github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.ReservePhotoSessionResponse:
@@ -2174,69 +2186,6 @@ definitions:
         type: string
     type: object
   github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.UpdateListingRequest:
-    properties:
-      accompanying:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      annualGroundRent:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      annualTax:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      buildable:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      condominium:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      corner:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-bool'
-      delivered:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      description:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      exchange:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-bool'
-      exchangePercentual:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      exchangePlaces:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-array_github_com_projeto-toq_toq_server_internal_adapter_left_http_dto_UpdateListingExchangePlaceRequest'
-      features:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-array_github_com_projeto-toq_toq_server_internal_adapter_left_http_dto_UpdateListingFeatureRequest'
-      financing:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-bool'
-      financingBlockers:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-array_string'
-      guarantees:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-array_github_com_projeto-toq_toq_server_internal_adapter_left_http_dto_UpdateListingGuaranteeRequest'
-      installment:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      landSize:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      listingVersionId:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-int64'
-      monthlyGroundRent:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      monthlyTax:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      nonBuildable:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      owner:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      rentNet:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      sellNet:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64'
-      tenantEmail:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      tenantName:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      tenantPhone:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      title:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      transaction:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      visit:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
-      whoLives:
-        $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_core_utils.Optional-string'
     type: object
   github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.UpdateListingResponse:
     properties:
@@ -2600,17 +2549,7 @@ definitions:
       total:
         type: integer
     type: object
-  ? github_com_projeto-toq_toq_server_internal_core_utils.Optional-array_github_com_projeto-toq_toq_server_internal_adapter_left_http_dto_UpdateListingExchangePlaceRequest
-  : type: object
-  ? github_com_projeto-toq_toq_server_internal_core_utils.Optional-array_github_com_projeto-toq_toq_server_internal_adapter_left_http_dto_UpdateListingFeatureRequest
-  : type: object
-  ? github_com_projeto-toq_toq_server_internal_core_utils.Optional-array_github_com_projeto-toq_toq_server_internal_adapter_left_http_dto_UpdateListingGuaranteeRequest
-  : type: object
-  github_com_projeto-toq_toq_server_internal_core_utils.Optional-array_string:
-    type: object
   github_com_projeto-toq_toq_server_internal_core_utils.Optional-bool:
-    type: object
-  github_com_projeto-toq_toq_server_internal_core_utils.Optional-float64:
     type: object
   github_com_projeto-toq_toq_server_internal_core_utils.Optional-int64:
     type: object
@@ -6175,13 +6114,14 @@ paths:
         (ground rent) is optional but if provided, use either `annualGroundRent` OR
         `monthlyGroundRent`, never both.'
       parameters:
-      - description: Payload for update (ID must be provided in the body)
+      - description: Payload for update (listingIdentityId and listingVersionId are
+          required)
         in: body
         name: request
         required: true
         schema:
           $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.UpdateListingRequest'
-        x-example: '{"id":98765,"owner":"myself","features":[{"featureId":101,"quantity":2},{"featureId":205,"quantity":1}],"landSize":423.5,"corner":true,"nonBuildable":12.75,"buildable":410.75,"delivered":"furnished","whoLives":"tenant","description":"Apartamento
+        x-example: '{"listingIdentityId":1024,"listingVersionId":5001,"owner":"myself","features":[{"featureId":101,"quantity":2},{"featureId":205,"quantity":1}],"landSize":423.5,"corner":true,"nonBuildable":12.75,"buildable":410.75,"delivered":"furnished","whoLives":"tenant","description":"Apartamento
           amplo com vista panoramica","transaction":"sale","sellNet":1200000,"rentNet":8500,"condominium":1200.5,"monthlyTax":283.40,"monthlyGroundRent":150,"exchange":true,"exchangePercentual":50,"exchangePlaces":[{"neighborhood":"Vila
           Mariana","city":"Sao Paulo","state":"SP"},{"neighborhood":"Centro","city":"Campinas","state":"SP"}],"installment":"short_term","financing":true,"financingBlockers":["pending_probate","other"],"guarantees":[{"priority":1,"guarantee":"security_deposit"},{"priority":2,"guarantee":"surety_bond"}],"visit":"client","tenantName":"Joao
           da Silva","tenantEmail":"joao.silva@example.com","tenantPhone":"+5511912345678","title":"Oportunidade","accompanying":"assistant"}'
@@ -6449,7 +6389,7 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.ReservePhotoSessionRequest'
-        x-example: '{"listingId":1001,"slotId":2002}'
+        x-example: '{"listingIdentityId":1024,"slotId":2002}'
       produces:
       - application/json
       responses:
@@ -6532,9 +6472,9 @@ paths:
         name: sort
         type: string
       - description: Listing identifier
-        example: 1001
+        example: 1024
         in: query
-        name: listingId
+        name: listingIdentityId
         required: true
         type: integer
       - description: Listing timezone
@@ -6635,7 +6575,7 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.DiscardDraftVersionRequest'
-        x-example: '{"versionId":12345}'
+        x-example: '{"listingIdentityId":1024,"versionId":5001}'
       produces:
       - application/json
       responses:
@@ -6741,7 +6681,7 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/github_com_projeto-toq_toq_server_internal_adapter_left_http_dto.PromoteListingVersionRequest'
-        x-example: '{"versionId":12345}'
+        x-example: '{"listingIdentityId":1024,"versionId":5001}'
       produces:
       - application/json
       responses:
